; ModuleID = '/home/carl/AnghaBench/git/extr_commit.c_detach_commit_buffer.c'
source_filename = "/home/carl/AnghaBench/git/extr_commit.c_detach_commit_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }
%struct.commit = type { i32 }
%struct.commit_buffer = type { i64, i32* }

@the_repository = common dso_local global %struct.TYPE_4__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @detach_commit_buffer(%struct.commit* %0, i64* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.commit*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca %struct.commit_buffer*, align 8
  %7 = alloca i8*, align 8
  store %struct.commit* %0, %struct.commit** %4, align 8
  store i64* %1, i64** %5, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** @the_repository, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.commit*, %struct.commit** %4, align 8
  %14 = call %struct.commit_buffer* @buffer_slab_peek(i32 %12, %struct.commit* %13)
  store %struct.commit_buffer* %14, %struct.commit_buffer** %6, align 8
  %15 = load %struct.commit_buffer*, %struct.commit_buffer** %6, align 8
  %16 = icmp ne %struct.commit_buffer* %15, null
  br i1 %16, label %23, label %17

17:                                               ; preds = %2
  %18 = load i64*, i64** %5, align 8
  %19 = icmp ne i64* %18, null
  br i1 %19, label %20, label %22

20:                                               ; preds = %17
  %21 = load i64*, i64** %5, align 8
  store i64 0, i64* %21, align 8
  br label %22

22:                                               ; preds = %20, %17
  store i8* null, i8** %3, align 8
  br label %41

23:                                               ; preds = %2
  %24 = load %struct.commit_buffer*, %struct.commit_buffer** %6, align 8
  %25 = getelementptr inbounds %struct.commit_buffer, %struct.commit_buffer* %24, i32 0, i32 1
  %26 = load i32*, i32** %25, align 8
  %27 = bitcast i32* %26 to i8*
  store i8* %27, i8** %7, align 8
  %28 = load i64*, i64** %5, align 8
  %29 = icmp ne i64* %28, null
  br i1 %29, label %30, label %35

30:                                               ; preds = %23
  %31 = load %struct.commit_buffer*, %struct.commit_buffer** %6, align 8
  %32 = getelementptr inbounds %struct.commit_buffer, %struct.commit_buffer* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = load i64*, i64** %5, align 8
  store i64 %33, i64* %34, align 8
  br label %35

35:                                               ; preds = %30, %23
  %36 = load %struct.commit_buffer*, %struct.commit_buffer** %6, align 8
  %37 = getelementptr inbounds %struct.commit_buffer, %struct.commit_buffer* %36, i32 0, i32 1
  store i32* null, i32** %37, align 8
  %38 = load %struct.commit_buffer*, %struct.commit_buffer** %6, align 8
  %39 = getelementptr inbounds %struct.commit_buffer, %struct.commit_buffer* %38, i32 0, i32 0
  store i64 0, i64* %39, align 8
  %40 = load i8*, i8** %7, align 8
  store i8* %40, i8** %3, align 8
  br label %41

41:                                               ; preds = %35, %22
  %42 = load i8*, i8** %3, align 8
  ret i8* %42
}

declare dso_local %struct.commit_buffer* @buffer_slab_peek(i32, %struct.commit*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
